--- a/turno/templates/index.html
+++ b/turno/templates/index.html
@@ -7,27 +7,31 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-{% block header %}
     <header class="encabezado">
         <ul class="nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index">Home</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="lista_clientes">Lista de clientes</a>
+                <a class="nav-link" href="{% url 'lista_clientes' %}">Lista de clientes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">lista de turnos</a>
+                <a class="nav-link" href="#">Lista de turnos</a>
             </li>
-          </ul>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Cerrar sesión</a>
+            </li>
+        </ul>
+        {% if user.is_authenticated %}
+            <div class="usuario">{{ user.username|upper }}</div>
+        {% endif %}
     </header>
-{% endblock header %}
     <div class="container-wrapper">
         <div class="container">
             <a class="btn btn-secondary" href="{% url 'crear_cliente' %}">REGISTRAR CLIENTE</a>
         </div>
         <div class="container">
-            <button type="button" class="btn btn-secondary">ASIGNAR TURNO</button>
+            <a class="btn btn-secondary" href="{% url 'crear_turno' %}">ASIGNAR TURNO</a>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -63,6 +67,12 @@
 
     .encabezado .nav-link:hover {
             text-decoration: underline; /* Opcional: Añadir subrayado al pasar el ratón */
+    }
+
+    .usuario {
+        margin-left: auto; /* Coloca el nombre de usuario a la derecha */
+        color: white; /* Establece el color del texto en blanco */
+        margin-right: 20px; /* Añade un margen derecho para separarlo del borde */
     }
 
     .container-wrapper {
