--- a/usuarios/usuarios/templates/turnos/adquirir_turno.html
+++ b/usuarios/usuarios/templates/turnos/adquirir_turno.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Adquirir Turno</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.9.1/font/bootstrap-icons.min.css" rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -55,6 +56,25 @@
             border-radius: 5px;
             cursor: pointer;
         }
+        .section-title {
+            margin-bottom: 20px;
+            position: relative;
+            padding-bottom: 10px;
+            text-align: center;
+        }
+        .section-title:before {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 50px;
+            height: 4px;
+            background-color: yellow;
+        }
+        .icon {
+            margin-right: 10px;
+        }
     </style>
 </head>
 <body>
@@ -67,7 +87,7 @@
 
     <div class="container">
         <div class="card">
-            <h1 class="text-center">Adquiera su Turno</h1>
+            <h1 class="section-title"><i class="bi bi-ticket icon"></i>Adquiera su Turno</h1>
             <h2 class="text-center"><br></h2>
             <form method="post">
                 {% csrf_token %}
