--- a/usuarios/asesores/templates/asesores/turnos_pendientes.html
+++ b/usuarios/asesores/templates/asesores/turnos_pendientes.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Turnos Pendientes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.9.1/font/bootstrap-icons.min.css" rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -51,18 +52,43 @@
         .item-details {
             flex: 1;
         }
+        .section-title {
+            margin-bottom: 20px;
+            position: relative;
+            padding-bottom: 10px;
+        }
+        .section-title:before {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 50px;
+            height: 4px;
+            background-color: yellow;
+        }
+        .icon {
+            margin-right: 10px;
+        }
     </style>
+    <script>
+        function autoRefresh() {
+            setTimeout(function() {
+                location.reload();
+            }, 5000);  // 5000 ms = 5 segundos
+        }
+        window.onload = autoRefresh;
+    </script>
 </head>
 <body>
     <div class="header">
         <div>
-            <span class="logo-text">Asesor: {{ request.user.name}} {{ request.user.last_name }}</span>
+            <span class="logo-text">Asesor: {{ request.user.name }} {{ request.user.last_name }}</span>
         </div>
         <button class="return-btn" onclick="window.location.href='{% url 'select_area' %}'">Regresar</button>
     </div>
 
     <div class="container">
-        <h1>Turnos Pendientes en {{ area }}</h1>
+        <h1 class="section-title"><i class="bi bi-clock icon"></i>Turnos Pendientes en {{ area }}</h1>
         <ul class="list-group">
             {% for turno in turnos %}
                 <li class="list-group-item">
