--- a/usuarios/turnos/templates/gestion_turnos/vista_principal.html
+++ b/usuarios/turnos/templates/gestion_turnos/vista_principal.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Gestión de Turnos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.9.1/font/bootstrap-icons.min.css" rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -30,7 +31,23 @@
             align-items: center;
             background-size: cover; /* Ajustar la imagen para cubrir el contenedor */
             background-position: center; /* Centrar la imagen */
-          
+        }
+        .section-title {
+            margin-bottom: 20px;
+            position: relative;
+            padding-bottom: 10px;
+        }
+        .section-title:before {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 50px;
+            height: 4px;
+            background-color: yellow;
+        }
+        .icon {
+            margin-right: 10px;
         }
     </style>
 </head>
@@ -42,11 +59,11 @@
     </div>
     <div class="container">
         <div class="turnos-container">
-            <h2>Turnos Pendientes</h2>
+            <h2 class="section-title"><i class="bi bi-clock icon"></i>Turnos Pendientes</h2>
             <div id="turnos-pendientes" class="turnos-list"></div>
         </div>
         <div class="turnos-container">
-            <h2>Turnos Atendidos</h2>
+            <h2 class="section-title"><i class="bi bi-check-circle icon"></i>Turnos Atendidos</h2>
             <div id="turnos-atendidos" class="turnos-list"></div>
         </div>
     </div>
@@ -115,7 +132,7 @@
         
         $(document).ready(function() {
             cargarTurnos();
-            setInterval(cargarTurnos, 1000);  // Recarga los turnos cada 5 segundos
+            setInterval(cargarTurnos, 1000);  // Recarga los turnos cada 1 segundo
         });
         
     </script>
